Trying to solve not smooth transitions on iOS

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ h1 {
     margin-right: auto;
     padding-bottom: 2rem;
     opacity: 0;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
 
     transition: opacity 0.5s;
 }
